<resources>
    <string name="app_name">Terminal Byte Health</string>
    <string name="home">HOME</string>
    <string name="Login">LOGIN</string>
    <string name="Account">ACCOUNT</string>
    <string name="signup">SIGN UP</string>
    <string name="new_to_terminal_byte_health">NEW TO TERMINAL BYTE HEALTH?</string>
    <string name="existing_user">Existing User?</string>
    <string name="enter_email">ENTER EMAIL</string>
    <string name="enter_password">ENTER PASSWORD</string>
    <string name="skip_login">Skip Login</string>
    <string name="navheader">NavHeader</string>
    <string name="navheadertitle">NavHeaderTitle</string>
    <string name="nav_header_subtitle">nav_header_subtitle</string>
    <string name="back">Back</string>
    <string name="settings">SETTINGS</string>
    <string name="welcome">WELCOME</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_email_id">Enter Email ID</string>
    <string name="sign_up">Sign Up</string>
    <string name="gallery">Gallery</string>
    <string name="slideshow">Slideshow</string>
    <string name="menu_tooles">Menu Tooles</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="set_alarm">SET ALARM</string>
    <string name="set_the_time">Set the time:</string>
    <string name="set_alarm_button">Set Alarm</string>
    <string name="create_alarm">Create Alarm</string>
    <string name="logo">Logo</string>
    <string name="login_success_prompt">SUCCESSFUL LOGIN</string>
    <string name="login_failed_prompt">LOGIN FAILED</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="done">Done</string>
    <string name="welcome_home_syntax">WELCOME_NAME</string>

</resources>
