<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <androidx.appcompat.widget.Toolbar android:layout_width="match_parent"
                                       android:layout_height="wrap_content"
                                       android:background="#B00F0101">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="Sign Up"
                  android:textColor="@color/White"
                  android:textSize="30sp"/>
    </androidx.appcompat.widget.Toolbar>
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:textSize="50sp"
                      android:textColor="@color/Black"
                      android:text="@string/welcome"
                      android:layout_gravity="center"

                      style="@style/TextAppearance.Compat.Notification.Title"
                      android:id="@+id/welcome_message" android:visibility="visible" tools:visibility="visible"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:layout_marginTop="50dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_gravity="center"
                    android:ems="10"
                    android:id="@+id/user_name" android:hint="@string/enter_username"
                    android:importantForAutofill="no" tools:targetApi="o" android:visibility="visible"
                    tools:visibility="visible"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:layout_marginTop="50dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_gravity="center"
                    android:ems="10"
                    android:id="@+id/name" android:hint="@string/enter_name" android:autofillHints="no"
                    tools:targetApi="o"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:layout_marginTop="50dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_gravity="center"
                    android:ems="10"
                    android:id="@+id/email" android:hint="@string/enter_email_id" tools:ignore="TextFields"
                    android:importantForAutofill="no" tools:targetApi="o"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:ems="10"
                    android:layout_marginTop="50dp"
                    android:hint="@string/enter_password"
                    android:id="@+id/editText3" android:importantForAutofill="no" tools:targetApi="o"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:inputType="textPassword"
                    android:layout_marginTop="50dp"
                    android:hint="@string/confirm_password"
                    android:ems="10"
                    android:id="@+id/editText4" android:importantForAutofill="no" tools:targetApi="o"/>
            <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:text="@string/create_account"
                    android:layout_marginTop="30dp"
                    android:layout_gravity="center"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>