<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    
    <androidx.appcompat.widget.Toolbar android:layout_height="wrap_content"
                                       android:background="@color/Black"
                                       android:layout_marginBottom="30dp"
                                       
    android:layout_width="match_parent">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:textColor="@color/White"
                  android:text="@string/set_alarm"
                  android:gravity="center"
                  android:textSize="30sp"
                  style="@style/TextAppearance.AppCompat.Title"
                  />
    </androidx.appcompat.widget.Toolbar>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
    android:textSize="30sp"
              style="@style/TextAppearance.AppCompat.Headline"
    android:text="@string/set_the_time"/>

    <TimePicker android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:layout_gravity="center"
    android:layout_marginTop="30dp">

    </TimePicker>

    <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
    android:layout_gravity="center"
            android:textSize="20sp"
            android:textColor="@color/White"
    android:text="@string/set_alarm_button"
            android:background="@drawable/set_alarm_button"
    />

</LinearLayout>