<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical"
    >
        <androidx.appcompat.widget.Toolbar android:layout_width="match_parent"
                                           android:layout_height="wrap_content"
                                           android:background="@color/Black" app:layout_constraintTop_toTopOf="parent"
                                           app:layout_constraintStart_toStartOf="parent"
                                           app:layout_constraintEnd_toEndOf="parent" android:id="@+id/toolbar"
                                           app:layout_constraintHorizontal_bias="0.0">
            <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:orientation="horizontal">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:text="@string/Login"
                          android:textColor="@color/White"
                          android:textSize="30sp"/>

            </LinearLayout>

        </androidx.appcompat.widget.Toolbar>
        <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                           android:layout_height="match_parent">
            <ImageView
                    android:layout_width="122dp"
                    android:layout_height="135dp" app:srcCompat="@drawable/user"
                    android:id="@+id/imageView3" android:layout_marginTop="30dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp" android:contentDescription="@string/Login"
                    app:layout_constraintHorizontal_bias="0.498" app:layout_constraintTop_toTopOf="parent"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:ems="10"
                    android:id="@+id/enterEmail"
                    app:layout_constraintTop_toBottomOf="@+id/imageView3" android:layout_marginTop="100dp"
                    android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="8dp" android:layout_marginBottom="73dp"
                    app:layout_constraintBottom_toTopOf="@+id/editText2"
                    android:hint="@string/enter_email"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/editText2" android:layout_marginTop="200dp"
                    app:layout_constraintTop_toBottomOf="@+id/imageView3" android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                    android:hint="@string/enter_password"/>
            <Button
                    android:text="@string/Login"
                    android:layout_width="90dp"
                    android:layout_height="60dp"
                    android:background="@drawable/button"
                    android:textColor="@color/White"
                    android:textSize="20sp"
                    android:id="@+id/login" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/editText2" android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>